# MunSteam_Release

./: .env  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  fixture.json  fixtures.json  manage.py  pyproject.toml  requirements.txt  sta.py  test.py  testik.py
MunSteam/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
achievements/: admin.py  models.py  serializer.py  service.py  urls.py  views.py
achievements/migrations/: 0001_initial.py  0002_gameachievement_app_id.py  0003_remove_gameuser_user_gameuser_user_steam_id.py  0004_remove_gameachievement_user_and_more.py  0005_alter_gameachievement_user_steam_id.py  0006_gameachievement_game_name.py
achievements/templates/: achievement.html  gameachievements.html
friends/: admin.py  models.py  serializer.py  service.py  urls.py  views.py
friends/migrations/: 0001_initial.py  0002_alter_userfriends_steam_id_user.py  0003_userfriends_friends_info.py  0004_remove_userfriends_friends_list.py
friends/templates/: friendspage.html
games/: 1.py  admin.py  apps.py  models.py  service.py  tasks.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_alter_gamesteam_last_update.py  0003_alter_gamesteam_last_update.py  0004_alter_gamesteam_last_update.py  0005_alter_gamesteam_last_update.py  0006_alter_gamesteam_last_update.py  0007_alter_gamesteam_last_update.py  0008_alter_gamesteam_last_update.py  0009_alter_gamesteam_last_update.py  0010_alter_gamesteam_last_update.py  0011_alter_gamesteam_last_update.py  0012_alter_gamesteam_last_update.py  0013_alter_gamesteam_last_update.py  0014_alter_gamesteam_last_update.py  0015_alter_gamesteam_last_update.py  0016_remove_gamesteam_last_update_and_more.py  0017_alter_gamesteam_last_update_news_and_more.py  (+99 more)
nginx/: Dockerfile  default.conf  nginx.conf
statistic_from_user/: admin.py  apps.py  check_api.py  models.py  serializer.py  service.py  urls.py  views.py
user/: admin.py  api.py  apps.py  auth.py  forms.py  models.py  serializers.py  service.py  tasks.py  urls.py  utils.py  views.py
(+49 files in other folders)
