[tool.poetry]
name = "munsteam"
version = "0.1.0"
description = ""
authors = ["N1lrinside <lolzorin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "23.2.1"
aiogram = "3.6.0"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
amqp = "5.2.0"
annotated-types = "0.6.0"
apscheduler = "3.6.3"
art = "6.1"
asgiref = "3.8.1"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
billiard = "4.2.0"
bs4 = "0.0.2"
cachetools = "4.2.2"
celery = "5.3.5"
certifi = "2024.7.4"
cffi = "1.16.0"
chardet = "3.0.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
cryptography = "43.0.0"
deep-translator = "1.11.4"
defusedxml = "0.8.0rc2"
django = "4.2.14"
django-debug-toolbar = "4.4.6"
djangorestframework = "3.15.2"
flower = "2.0.1"
frozenlist = "1.4.1"
googletrans = "3.1.0a0"
h11 = "0.9.0"
h2 = "3.2.0"
hpack = "3.0.0"
hstspreload = "2024.4.1"
httpcore = "0.9.1"
httpx = "0.13.3"
humanize = "4.10.0"
hyperframe = "5.2.0"
idna = "2.10"
kombu = "5.3.7"
libretranslatepy = "2.1.1"
lxml = "5.1.0"
magic-filter = "1.0.12"
multidict = "6.0.5"
mysql-connector-python = "8.3.0"
oauthlib = "3.2.2"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.47"
psycopg = "3.1.18"
psycopg2 = "2.9.9"
pycparser = "2.22"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pyjwt = "2.9.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-telegram-bot = "13.13"
python3-openid = "3.2.0"
pytz = "2024.1"
redis = "5.0.8"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
rfc3986 = "1.5.0"
setuptools = "68.2.2"
six = "1.16.0"
sniffio = "1.3.1"
social-auth-app-django = "5.4.2"
social-auth-core = "4.5.4"
soupsieve = "2.5"
sqlparse = "0.5.1"
tornado = "6.4.1"
typing-extensions = "4.11.0"
tzdata = "2024.1"
tzlocal = "5.1"
urllib3 = "2.2.2"
vine = "5.1.0"
wcwidth = "0.2.13"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
